<resources>
    <string name="app_name">Budget App</string>
    <string name="logo">logo</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_register">Don\'t have an account ? Register</string>
    <string name="register">register</string>
    <string name="already_have_an_account_login">already have an account ? Login</string>
    <string name="april_08_2022">April 08, 2022</string>
    <string name="date">date</string>
    <string name="description">Description</string>
    <string name="textview">TextView</string>
    <string name="march_12_2022">March 12, 2022</string>
    <string name="_12_000_00">₹ 12,000.00</string>
    <string name="_3200">₹ 3200</string>
    <string name="edt_hint">Type Here…</string>
    <string name="btn_add">Add</string>
    <string name="btn_read">Read</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="hod">HOD</string>
    <string name="_1499">1499</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
</resources>