<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:showDividers="middle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:orientation="vertical">

            <CalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

<!--            <EditText-->
<!--                android:id="@+id/edtDate"-->
<!--                android:layout_width="240dp"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="4dp"-->
<!--                android:layout_marginBottom="4dp"-->
<!--                android:gravity="center_horizontal"-->
<!--                android:hint="@string/march_12_2022"-->
<!--                android:importantForAutofill="no"-->
<!--                android:inputType="date"-->
<!--                android:textColorHint="#78909C"-->
<!--                android:textSize="20sp" />-->

            <EditText
                android:id="@+id/edtTitle"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal"
                android:hint="@string/hod"
                android:importantForAutofill="no"
                android:inputType="textShortMessage"
                android:textColorHint="#78909C"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtAmount"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:gravity="center_horizontal"
                android:hint="@string/_1499"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColorHint="#78909C"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="onAddClicked"
            android:text="@string/btn_add"
            android:textSize="24sp"
            tools:ignore="UsingOnClickInXml" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBudget"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:foregroundGravity="center_vertical"
        android:paddingStart="12dp"
        android:paddingTop="8dp"
        android:paddingEnd="12dp" />

</LinearLayout>
